[gd_scene load_steps=3 format=3 uid="uid://e0vhwlrj3t4x"]

[ext_resource type="Script" path="res://src/ui/option_menu.gd" id="1_kem1k"]
[ext_resource type="Theme" uid="uid://lgf534gmgtcp" path="res://ui/ui_theme.tres" id="2_y46u4"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kem1k")

[node name="TabContainer" type="TabContainer" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -403.0
offset_right = 210.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_y46u4")
tab_alignment = 1

[node name="Video" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="vsync" type="CheckButton" parent="TabContainer/Video"]
layout_mode = 2
text = "VSync:"

[node name="resolution" type="Label" parent="TabContainer/Video"]
layout_mode = 2
text = "Resolution:"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Video/resolution"]
layout_mode = 0
offset_left = 204.0
offset_top = -4.0
offset_right = 385.0
offset_bottom = 39.0
alignment = 2
item_count = 3
selected = 2
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="Audio" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="sfx" type="Label" parent="TabContainer/Audio"]
layout_mode = 2
text = "SFX:"

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/sfx"]
layout_mode = 2
offset_left = 134.0
offset_top = 12.0
offset_right = 360.0
offset_bottom = 28.0
value = 100.0
rounded = true

[node name="music" type="Label" parent="TabContainer/Audio"]
layout_mode = 2
text = "Music:"

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/music"]
layout_mode = 0
offset_left = 134.0
offset_top = 14.0
offset_right = 360.0
offset_bottom = 30.0
value = 100.0
rounded = true

[connection signal="toggled" from="TabContainer/Video/vsync" to="." method="_on_vsync_toggled"]
[connection signal="item_selected" from="TabContainer/Video/resolution/OptionButton" to="." method="_on_max_fps_option_selected"]
[connection signal="value_changed" from="TabContainer/Audio/sfx/HSlider" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/music/HSlider" to="." method="_on_music_value_changed"]
